# tbd-ui

./: .gitignore  .travis.yml  Cargo.toml
src/: main.rs
web/: app.appcache  index.html
web/html/: activetask.html  log.html  pooledtask.html
web/js/: activetask.component.js  app.js  dataservice.service.js  log.component.js  pooledtask.component.js
