[package]
name = "tbd-ui"
version = "0.3.0"
authors = ["Simon Goller <neosam+github@posteo.de>"]

[dependencies]
nickel = "*"
rustc-serialize = "0.3"
tbd = { git = "https://github.com/neosam/tbd.git", branch = "0.3" }
#tbd = { path = "../tbd" }
time = "0.1"
rand = "0.3"
log = "0.3"
env_logger = "0.3"
